debezium/apps/060-Route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kronos-route
  labels:
    app: kronos
spec:
  to:
    kind: Service
    name: kronos-svc
  port:
    targetPort: http
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dmt-route
  labels:
    app: dmt
spec:
  to:
    kind: Service
    name: dmt-svc
  port:
    targetPort: http
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: data-generator-api-route
  labels:
    app: data-generator-api
spec:
  to:
    kind: Service
    name: data-generator-api-svc
  port:
    targetPort: http
